objects/vlocity_ins__Jurisdiction__c.object
<CustomObject>
    <description>Defines the geographic area over which authority extend; legal authority; the authority to hear and determine causes of action.</description>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <description>Name of Jurisdiction&apos;s city.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountryCode__c</fullName>
        <description>The ISO country code for the Jurisdiction.</description>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountyCode__c</fullName>
        <description>The county code for the Jurisdiction. For example Federal Information Processing System (FIPS) County Code.</description>
        <label>County Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__County__c</fullName>
        <description>Name of Jurisdiction&apos;s county.</description>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentJurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Parent Jurisdiction.</description>
        <label>Parent Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>Jurisdictions</relationshipLabel>
        <relationshipName>Jurisdictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <description>Postal Code of the Jurisdiction.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingArea__c</fullName>
        <description>Identifier that represents a Rating Area.</description>
        <label>Rating Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateCode__c</fullName>
        <description>DEPRECATED. Please use States/Provinces.</description>
        <label>State Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatesProvinces__c</fullName>
        <description>ISO codes for State/Province for the Jurisdiction.</description>
        <label>States/Provinces</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityStateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Type of jurisdiction such as Provider, Producer, Rating Area, Sales, Service or others.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Rating Area</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Jurisdiction</label>
    <nameField>
        <label>Jurisdiction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>